Added titles to page

--- a/index.html
+++ b/index.html
@@ -4,18 +4,49 @@
     <title>AMEE ASSAD</title>
     <meta charset="utf-8"> 
     <link rel="stylesheet" type="text/css" href="css/home.css" />
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="js/my.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div class="social"><a href="https://www.linkedin.com/in/amee-assad/" class="fa fa-linkedin"></a><a href="https://www.instagram.com/emechka/" class="fa fa-instagram"></a></div>
-    <h1> AMEE ASSAD</h1>
+    <a href="#reload" class="slow">webpage slow? click here</a>
+    <h1> <span class="firstname">AMEE </span> ASSAD</h1>
+
+    <div class="ref">
+    <div class="pages"> 
+        <div class="page trigger" id="01">coding</div> 
+        <div class="page trigger" id="02">writing</div> 
+        <div class="page trigger" id="03">production</div> 
+        <div class="page trigger" id="04">hobbies</div> 
+    </div>
+
+    <div class="social">
+        <a href="https://www.linkedin.com/in/amee-assad/"><img src="https://ya-webdesign.com/images250_/linkedin-icon-png-transparent-background-8.png" class="logos" alt="linkedin"></a>
+        <a href="https://www.instagram.com/emechka/"><img src="https://cdn.freebiesupply.com/images/large/2x/instagram-icon-white-on-black-circle.png" class="logos" alt="instagram"></a>
+        <a href="https://github.com/ameeassad/"><img src="https://image.flaticon.com/icons/svg/25/25231.svg" class="logos" alt="github"></a>
+        <a href="https://medium.com/@aa3628"><img src="https://miro.medium.com/fit/c/96/96/1*6_fgYnisCa9V21mymySIvA.png" class="logos" alt="medium"></a>
+    </div>
+    </div>
 
     <div class="background">
-        <div class="water"></div>
+        <div class="water" id="reload"></div>
+    </div>
+
+    <div class="slider close" id="01-info">
+        <p>coding</p>
+    </div>
+
+    <div class="slider close" id="02-info">
+        <p>writing</p>
+    </div>
+
+    <div class="slider close" id="03-info">
+        <p>production</p>
+    </div>
+
+    <div class="slider close" id="04-info">
+        <p>hobbies</p>
     </div>
 
 
@@ -27,8 +58,6 @@
           keyTimes="0;0.5;1" values="0.02 0.06;0.04 0.08;0.02 0.06" repeatCount="indefinite"/>
         </filter>
     </svg>
-
-    <div id="footer"> <a href="#">How I built this website</a></div>
 
 </body>
 </html>
