added pages, fixed sliders, added projects

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     <div class="ref">
     <div class="pages"> 
-        <div class="page trigger" id="01">coding</div> 
-        <div class="page trigger" id="02">writing</div> 
-        <div class="page trigger" id="03">production</div> 
-        <div class="page trigger" id="04">hobbies</div> 
+        <div class="page trigger" id="01">[covid web-app]</div> 
+        <div class="page trigger" id="02">[red sea web-app]</div> 
+        <div class="page trigger" id="03">[computer vision guitar]</div> 
+        <div class="page trigger" id="04">[chatbot mobile-app]</div> 
+        <div class="page trigger" id="05">[igloo]</div> 
     </div>
 
     <div class="social">
@@ -34,19 +35,28 @@
     </div>
 
     <div class="slider close" id="01-info">
-        <p>coding</p>
+        <p>UX/UI covid-19 informational web-app I designed in Figma and ran iterative user testing.</p>
+        <iframe id="covid" src="projects/covid/home.html" width="1200" height="600"  frameborder="0"></iframe>
+
     </div>
 
     <div class="slider close" id="02-info">
-        <p>writing</p>
+        <p> Full-stack project: using python + flask and html + javascript to build a web app.</p>
+       <iframe id="redsea" width="800" height="600" src="https://youtu.be/CdKcLv-Q7U8"></iframe> 
     </div>
 
     <div class="slider close" id="03-info">
-        <p>production</p>
+        <p>Currently converting this project over from python. Check back later!</p>
     </div>
 
     <div class="slider close" id="04-info">
-        <p>hobbies</p>
+        <p>** in progress **</p>
+    </div>
+
+    <div class="slider close" id="05-info">
+        <p>Bonus! My very first html + javascript project. Presenting my portfolio/resume playfully!</p>
+        <iframe id="igloo" src="projects/igloo/index.html" width="1000" height="800"  frameborder="0"></iframe>
+        
     </div>
 
 
