fixed for mobile view

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="slider close" id="05-info">
         <p>Bonus! My very first html + javascript project. Presenting my portfolio/resume playfully!</p>
-        <iframe id="igloo" src="projects/igloo/index.html" width="1000" height="800"  frameborder="0"></iframe>
+        <iframe id="igloo" src="projects/igloo/index.html" width="100%" height="auto"  frameborder="0"></iframe>
         
     </div>
 
