--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
 
     <div class="slider close" id="01-info">
         <p>UX/UI covid-19 informational web-app I designed in Figma and ran iterative user testing.</p>
-        <iframe id="covid" src="projects/covid/home.html" width="1200" height="600"  frameborder="0"></iframe>
+        <div class = "proj-container">
+            <iframe id="covid" src="projects/covid/home.html" width="1200" height="600"  frameborder="0"></iframe>
+        </div>  
 
     </div>
 
     <div class="slider close" id="02-info">
         <p> Full-stack project: using python + flask and html + javascript to build a web app.</p>
-       <iframe id="redsea" width="800" height="600" src="https://youtu.be/CdKcLv-Q7U8"></iframe> 
+        <div class = "proj-container">
+            <iframe id="redsea" width="800" height="600" src="https://youtu.be/CdKcLv-Q7U8"></iframe> 
+        </div>
     </div>
 
     <div class="slider close" id="03-info">
@@ -55,7 +59,9 @@
 
     <div class="slider close" id="05-info">
         <p>Bonus! My very first html + javascript project. Presenting my portfolio/resume playfully!</p>
-        <iframe id="igloo" src="projects/igloo/index.html" width="100%" height="auto"  frameborder="0"></iframe>
+        <div class = "proj-container">
+            <iframe id="igloo" src="projects/igloo/index.html" width="100%" height="auto"  frameborder="0"></iframe>
+        </div>
         
     </div>
 
