--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173920225-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -29,7 +28,8 @@
         <div class="page trigger" id="02">[red sea web-app]</div> 
         <div class="page trigger" id="03">[computer vision guitar]</div> 
         <div class="page trigger" id="04">[chatbot mobile-app]</div> 
-        <div class="page trigger" id="05">[igloo]</div> 
+
+        <!-- <div class="page trigger" id="05">[igloo]</div> -->
     </div>
 
     <div class="social">
@@ -45,35 +45,53 @@
     </div>
 
     <div class="slider close" id="01-info">
+        <div class ="back"> <- </div>
         <p>UX/UI covid-19 informational web-app I designed in Figma and ran iterative user testing.</p>
         <div class = "proj-container">
-            <iframe id="covid" src="projects/covid/home.html" width="1200" height="600"  frameborder="0"></iframe>
+            <iframe id="covid" src="projects/covid/home.html" frameborder="0"></iframe>
         </div>  
 
     </div>
 
     <div class="slider close" id="02-info">
+        <div class ="back"> <- </div>
         <p> Full-stack project: using python + flask and html + javascript to build a web app.</p>
         <div class = "proj-container">
-            <iframe id="redsea" width="800" height="600" src="https://youtu.be/CdKcLv-Q7U8"></iframe> 
+            <img class="redsea-img" src="projects/redsea/redsea1.png">
+            <img class="redsea-img" src="projects/redsea/redsea2.png">
+            <img class="redsea-img" src="projects/redsea/redsea3.png">
+            <p>Check out the full video <a id="redsea-link" href="https://youtu.be/CdKcLv-Q7U8">here</a>. </p>
         </div>
     </div>
 
     <div class="slider close" id="03-info">
+        <div class ="back"> <- </div>
         <p>Currently converting this project over from python. Check back later!</p>
     </div>
 
     <div class="slider close" id="04-info">
-        <p>** in progress **</p>
+        <div class ="back"> <- </div>
+        <p>Mobile app made with Flutter (ios + android). Check out the full Medium article <a id="mombot-link" href="https://medium.com/@aa3628/this-mom-bot-inflates-your-childs-ego-so-you-don-t-have-to-efcc81292b95">here</a>.
+            <br>
+            I used the following tech: Flutter + Dialogflow (bot platform) + Firebase (Storage and Database)
+        </p>
+        <div class = "proj-container">
+            <img class="mombot-img" src="projects/app-challenge/mombot01.png">
+            <img class="mombot-img" src="projects/app-challenge/mombot02.png">
+            <img class="mombot-img" src="projects/app-challenge/mombot03.png">
+        </div>
     </div>
 
+    <!--
     <div class="slider close" id="05-info">
+        <div class ="back"> <- </div>
         <p>Bonus! My very first html + javascript project. Presenting my portfolio/resume playfully!</p>
         <div class = "proj-container">
-            <iframe id="igloo" src="projects/igloo/index.html" width="100%" height="auto"  frameborder="0"></iframe>
+            <iframe id="igloo" src="projects/igloo/index.html"  frameborder="0"></iframe>
         </div>
         
     </div>
+    -->
 
 
     <svg>
